--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
@@ -1,6 +1,7 @@
 #section_one {
 	display: flex;
 	width:100%;
+	
 }
 
 
@@ -8,7 +9,7 @@
 	background: url(#{$themePath}images/hero-desktop.jpg) top left no-repeat;
 	background-size: cover;
 	width:75%;
-	
+	padding-bottom:200px;
 }
 
 a.logo {
@@ -22,7 +23,7 @@ a.logo {
 
 
 .section_one_content {
-	margin:235px 0 0 0;
+	margin:230px 0 0 0;
 	padding:0 125px;
 	max-width: 1370px;
 	span.tagline {
@@ -30,6 +31,27 @@ a.logo {
 		font-family: $questrabold;
 		font-size:160px;
 		line-height: 165px;
+		display: block;
+	}
+}
+
+
+span.get_started_button {
+	background: $bluelight;
+	display: inline-block;
+	font-family: $gothicdemicondensed;
+	color:#fff;
+	text-transform: uppercase;
+	padding:30px 31px 20px;
+	line-height: 1;
+	margin:42px 0 0 0;
+	letter-spacing: 6px;
+	font-size: 18px;
+	transition: all .2s ease-in-out;
+	cursor: pointer;
+	&:hover {
+		background: #fff;
+		color:$bluelight;
 	}
 }
 
@@ -37,5 +59,61 @@ a.logo {
 
 .section_right {
 	width:25%;
-	background: red;
+	background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
 }
+
+
+
+
+.menu_wrapper {
+	width:100%;
+	display: flex;
+	
+}
+
+
+.phone_wrapper {
+	background: url(#{$themePath}images/stardust_texture.jpg) top left ;
+	text-align: center;
+	padding:50px 5px 44px;
+	width:calc(100% - 140px);
+	a {
+		text-decoration: none;
+		color:$bluelight;
+		font-family: $gothicdemicondensed;
+		font-size: 32px;
+	}
+}
+
+.menu_prompt {
+	width:140px;
+	background: $bluelight;
+	padding:30px 0 0 0;
+	span.menu_bars {
+		display: block;
+		background:#fff;
+		width:100%;
+		height:4px;
+		margin-bottom:9px;
+		width:52px;
+		margin-left:auto;
+		margin-right:auto;
+	}
+	span.menu_title {
+		font-family: $gothicdemicondensed;
+		color: #0a1727;
+		font-size:22px;
+		margin:16px 0 0;
+		display: block;
+		text-align: center;
+	}
+}
+
+
+.selling_points {
+	
+	width:100%;
+}
+
+
+	
