--- a/wp-content/themes/schlemmer/css/scss/_variables.scss
+++ b/wp-content/themes/schlemmer/css/scss/_variables.scss
@@ -10,7 +10,7 @@ $gothicdemi: 'ITCFranklinGothicStd-Demi';
 $gothicdemicompressed: 'ITCFranklinGothicStd-DmCp';
 $gothicdemicondensed: 'ITCFranklinGothicStd-DmCd';
 
-$questrabold: 'FONTSPRINGDEMO-QuestaGrandeBold';
+$questrabold: '4-questa_grande_bold_31';
 
 
 
