--- a/wp-content/themes/schlemmer/css/scss/_nav.scss
+++ b/wp-content/themes/schlemmer/css/scss/_nav.scss
@@ -25,13 +25,43 @@
 		}
 	}
 	ul.menu {
+		counter-reset: mycounter;
+		> li {
+			
+			position: relative;
+			padding-left:45px;
+			&:after {
+				content:"";
+				position: absolute;
+				top:6px;
+				left:0;
+				font-size:16px;
+				letter-spacing: 0.5px;
+				content: "0"counter(mycounter);
+				counter-increment: mycounter;
+				color:$greydark;
+			}
+		}
 		li {
 			text-transform: uppercase;
 			font-family: $gothicdemicondensed;
 			font-size: 32px;
 			margin-bottom:50px;
+			&:before {
+				content:"";
+				width:44px;
+				height:1px;
+				background: $bluelight;
+				display: inline-block;
+				position: relative;
+				top:-9px;
+				margin:0 40px 0 0;
+			}
 			a {
-				
+				transition: all .2s ease-in-out;
+				&:hover {
+					color:$bluelight;
+				}
 			}
 		}
 	}
@@ -42,6 +72,9 @@
 			text-transform: none;
 			font-size:26px;
 			margin-bottom:40px;
+			&:before {
+				display: none;
+			}
 		}
 	}
 }
