--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
@@ -89,6 +89,7 @@ span.get_started_button {
 	width:140px;
 	background: $bluelight;
 	padding:30px 0 0 0;
+	cursor: pointer;
 	span.menu_bars {
 		display: block;
 		background:#fff;
