--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -10,6 +10,7 @@
 				"global",
 				"sticky_header",
 				"nav",
-				"home-sections/section-one";
+				"home-sections/section-one",
+				"animations";
 
 
