--- a/wp-content/themes/schlemmer/css/scss/_nav.scss
+++ b/wp-content/themes/schlemmer/css/scss/_nav.scss
@@ -6,14 +6,30 @@
 	left:0;
 	z-index:200;
 	background: #fff;
+	overflow-y:scroll;
+}
+
+
+
+.nav_col_wrapper {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width:100%;
+	height:100%;
 }
 
 
 .nav_col {
-	// background: red;
+	display: flex;
+	&:first-of-type {
+		width:44%;
+		padding-left:15%;
+	}
+	&:last-of-type {
+		width:56%;
+		padding-left:1%;
+	}
 	ul {
 		list-style: none;
 		margin:0;
@@ -21,6 +37,11 @@
 			a {
 				text-decoration: none;
 				color:#06222d;
+				cursor: pointer;
+				transition: all .2s ease-in-out;
+				&:hover {
+					color:$bluelight;
+				}
 			}
 		}
 	}
@@ -47,6 +68,7 @@
 			font-family: $gothicdemicondensed;
 			font-size: 32px;
 			margin-bottom:50px;
+			letter-spacing: 1px;
 			&:before {
 				content:"";
 				width:44px;
@@ -57,12 +79,7 @@
 				top:-9px;
 				margin:0 40px 0 0;
 			}
-			a {
-				transition: all .2s ease-in-out;
-				&:hover {
-					color:$bluelight;
-				}
-			}
+			
 		}
 	}
 	ul.sub-menu {
@@ -71,10 +88,34 @@
 			font-family: $questrabold;
 			text-transform: none;
 			font-size:26px;
-			margin-bottom:40px;
+			margin-bottom:57px;
+			letter-spacing: 1px;
 			&:before {
 				display: none;
 			}
+		}
+	}
+}
+
+
+.overlay_close {
+	position: absolute;
+	top:50px;
+	right:40px;
+	cursor: pointer;
+	// background: red;
+	div {
+		display: block;
+		width:45px;
+		height:6px;
+		background: #06222d;
+		&:first-of-type {
+			transform-origin: 26px 6px 0;
+			transform: rotate(-45deg);
+		}
+		&:last-of-type {
+			transform-origin: 24px 1px 0;
+			transform: rotate(45deg);
 		}
 	}
 }
