--- a/wp-content/themes/schlemmer/css/scss/_animations.scss
+++ b/wp-content/themes/schlemmer/css/scss/_animations.scss
@@ -38,6 +38,122 @@
 	opacity: 0;
 }
 
+.nav_col ul.menu>li:after {
+	color:$bluelight;
+	
+}
+
+
+#nav_overlay.open {
+	.nav_col ul.menu>li {
+		&:hover {
+				&:after {
+					color:$bluelight;
+				}
+			}
+		&:after {
+			animation-name: number_change;
+			animation-duration: 800ms;
+			animation-fill-mode: both;
+			animation-timing-function: linear;
+			&:hover {
+				color:$bluelight;
+			}
+		}
+		
+		&:nth-of-type(1) {
+			&:after {
+				animation-delay: 1400ms;
+			}
+		}
+		&:nth-of-type(2) {
+			&:after {
+				animation-delay: 1500ms;
+			}
+		}
+		&:nth-of-type(3) {
+			&:after {
+				animation-delay: 1600ms;
+			}
+		}
+		&:nth-of-type(4) {
+			&:after {
+				animation-delay: 1700ms;
+			}
+		}
+		&:nth-of-type(5) {
+			&:after {
+				animation-delay: 1800ms;
+			}
+		}
+		&:nth-of-type(6) {
+			&:after {
+				animation-delay: 1900ms;
+			}
+		}
+		&:nth-of-type(7) {
+			&:after {
+				animation-delay: 2000ms;
+			}
+		}
+		&:nth-of-type(8) {
+			&:after {
+				animation-delay: 2100ms;
+			}
+		}
+		&:nth-of-type(9) {
+			&:after {
+				animation-delay: 2200ms;
+			}
+		}
+		&:nth-of-type(10) {
+			&:after {
+				animation-delay: 2300ms;
+			}
+		}
+		&:nth-of-type(11) {
+			&:after {
+				animation-delay: 2400ms;
+			}
+		}
+		&:nth-of-type(12) {
+			&:after {
+				animation-delay: 2500ms;
+			}
+		}
+	}
+}
+
+
+@keyframes number_fade {
+  from {
+    opacity: 0;
+ 	}
+ 	to {
+   opacity: 1;
+  }
+}
+
+
+@keyframes number_change {
+  from {
+    color:$bluelight;
+ 	}
+ 	to {
+   color:#9e9e9e;
+  }
+}
+
+@keyframes number_move {
+  from {
+    // transform: translateY(-3px);
+ 	}
+ 	to {
+   // transform: translateY(0px);
+  }
+}
+
+
 
 
 #nav_overlay.open {
@@ -45,7 +161,7 @@
 		animation-name: bullet_fade, bullet_move;
 		animation-duration: 800ms, 1000ms;
 		animation-fill-mode: both;
-		animation-timing-function: linear, cubic-bezier(.17,.66,.34,.98); ;
+		animation-timing-function: linear, cubic-bezier(.17,.66,.34,.98);
 		&:nth-of-type(1) {
 			animation-delay: 800ms;
 		}
@@ -104,3 +220,84 @@
    	transform: translateX(0px);
   }
 }
+
+.nav_col {
+	.sub_menu_container {
+		ul.sub-menu {
+			li {
+				opacity: 0;
+				// visibility: hidden;
+			}
+			
+		}
+	}
+}
+
+#nav_overlay.open {
+	ul.sub-menu.open {
+		> li {
+			animation-name: bullet_fade, bullet_move;
+			animation-duration: 800ms, 1000ms;
+			animation-fill-mode: both;
+			animation-timing-function: linear, cubic-bezier(.17,.66,.34,.98);
+			&:nth-of-type(1) {
+				animation-delay: 100ms;
+			}
+			&:nth-of-type(2) {
+				animation-delay: 150ms;
+			}
+			&:nth-of-type(3) {
+				animation-delay: 200ms;
+			}
+			&:nth-of-type(4) {
+				animation-delay: 250ms;
+			}
+			&:nth-of-type(5) {
+				animation-delay: 300ms;
+			}
+			&:nth-of-type(6) {
+				animation-delay: 350ms;
+			}
+			&:nth-of-type(7) {
+				animation-delay: 400ms;
+			}
+			&:nth-of-type(8) {
+				animation-delay: 450ms;
+			}
+			&:nth-of-type(9) {
+				animation-delay: 500ms;
+			}
+			&:nth-of-type(10) {
+				animation-delay: 550ms;
+			}
+			&:nth-of-type(11) {
+				animation-delay: 600ms;
+			}
+			&:nth-of-type(12) {
+				animation-delay: 650ms;
+			}
+		}
+	}
+}
+
+
+
+@keyframes submenu_fade {
+  from {
+    opacity: 0;
+ 		visibility: hidden;
+ 	}
+
+  to {
+    opacity: 1;
+   visibility: visible;
+  }
+}
+
+
+
+
+
+
+
+
