--- a/wp-content/themes/schlemmer/css/scss/_nav.scss
+++ b/wp-content/themes/schlemmer/css/scss/_nav.scss
@@ -108,6 +108,16 @@
 }
 
 
+
+.nav_col {
+	.sub_menu_container {
+		ul.sub-menu {
+			display: block;
+		}
+	}
+}
+
+
 .overlay_close {
 	position: absolute;
 	top:50px;
@@ -134,3 +144,72 @@
 		}
 	}
 }
+
+
+
+@media screen and (max-width: 1680px) {
+	
+	
+	.nav_col_wrapper {
+		max-width:1070px;
+		margin-left:auto;
+		margin-right:auto;
+	}
+	
+	
+	.nav_col {
+		justify-content: center;
+		
+		&:first-of-type {
+			width:50%;
+			padding-left:0;
+		}
+		&:last-of-type {
+			width:50%;
+			padding-right:0;
+			padding-left:0;
+		}
+	}
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1300px) {
+	
+	
+	.nav_col_wrapper {
+		max-width:940px;
+		
+	}
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1060px) {
+	
+	
+	
+	
+	.nav_col {
+		
+		
+		&:first-of-type {
+			width:100%;
+		}
+		&:last-of-type {
+			display: none;
+			justify-content: center;
+			width:100%;
+			max-width:350px;
+		}
+	}
+	
+	
+	
+} /* Media Query */
