--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
@@ -1,26 +1,130 @@
 #section_two {
 	width:100%;
-	height:1000px;
 	background: url(#{$themePath}images/stardust_texture.jpg) top left;
-	
+	padding:0 0 100px 7%;
+	&:after {
+		content:"";
+		clear:both;
+		display: block;
+	}
 }
 
 
 .section_two_header {
-	max-width:1600px;
-	margin-left:auto;
-	margin-right:auto;
-	.small_header {
+	padding:140px 0 0 45px;
+	h2.small_header {
 		font-family:$gothicdemicondensed;
 		color:#fff;
 		font-size:25px;
 		text-transform: uppercase;
 		letter-spacing: 16px;
+		font-weight: 300;
+		font-style:normal;
+		margin-bottom:0px;
 	}
-	.large_header {
-		
+	h1.large_header {
+		color:$bluelight;
+		font-family: $questrabold;
+		font-size:248px;
+		text-transform: uppercase;
+		font-weight: 300;
+		font-style:normal;
+		position: relative;
+		top:-5px;
+		margin-left:143px;
+		letter-spacing: 1.3px;
 	}
 }
 
+
+.section_two_content {
+	color:#fff;
+	font-family: $gothicbook;
+	font-size:18px;
+	line-height: 36px;
+	margin:82px 0 0 0;
+	width:51%;
+	padding-left:64px;
+	padding-right:7%;
+	float:left;
+	width:52%;
+	p, ul {
+		margin-bottom:35px;
+	}
+	p:first-of-type:first-letter{
+		
+    font-family: $questrabold;
+    font-size: 127px;
+    float: left;
+    line-height: 66px;
+    padding: 18px 15px 0 0;
+    color:$bluelight;
+	}
+	h2 {
+		color:$bluelight;
+		font-size:35px;
+		font-weight: 300;
+		font-style: normal;
+		display: block;
+		padding:14px 0 5px;
+	}
+}
+
+
+.section_two_img_wrapper {
+	float:right;
+	margin:-95px 0 0 0;
+	width: 48%;
+	img.section_two_img {
+		width: 100%;
+		height:auto;
+		max-width: 1000px;
+	}
+}
+
+
+
+
+@media screen and (max-width: 1825px) {
+	
+	
+	
+	#section_two {
+		padding: 0 0 0 35px;
+	}
+	
+	
+	.section_two_header {
+		h1.large_header {
+			margin-left: 66px;
+		}
+	}
+	
+	
+	.section_two_content {
+		padding-left: 44px;
+		padding-right: 5%;
+	}
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1600px) {
+	
+	
+	
+	.section_two_header {
+		h1.large_header {
+			font-size:220px;
+		}
+	}
+	
+	
+	
+} /* Media Query */
 
 
