--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -12,6 +12,7 @@
 				"nav",
 				"home-sections/section-one",
 				"home-sections/section-two",
+				"home-sections/section-three",
 				"animations";
 
 
