--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -13,6 +13,7 @@
 				"home-sections/section-one",
 				"home-sections/section-two",
 				"home-sections/section-three",
+				"home-sections/section-four",
 				"animations";
 
 
