--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
@@ -19,6 +19,7 @@
 
 svg#brooklyn {
 	width:320px;
+	height:320px;
 	float:right;
 	position: absolute;
 	top: -130px;
@@ -186,6 +187,7 @@ svg#brooklyn {
    
    svg#brooklyn {
 	   width:280px;
+	   height:280px;
 	   top: -121px;
 	   left:30px;
    }
@@ -267,8 +269,7 @@ svg#brooklyn {
 	
 	
 	svg#brooklyn {
-	  width:280px;
-	  top: -70px;
+		top: -70px;
 	  left:auto;
 	  right:30px;
   }
@@ -290,6 +291,7 @@ svg#brooklyn {
 	
 	svg#brooklyn {
 	  width:230px;
+	  height:230px;
 	  top: -65px;
 	  left:auto;
 	  right: -47px;
