--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -15,6 +15,7 @@
 				"home-sections/section-two",
 				"home-sections/section-three",
 				"home-sections/section-four",
+				"home-sections/section-five",
 				"animations";
 
 
