--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
@@ -1,14 +1,14 @@
 #section_five {
 	width:100%;
-	height:1000px;
 	background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
+	padding-bottom: 240px;
 }
 
 
 .section_five_inner {
-	max-width:1450px;
+	max-width: 1820px;
 	margin:0 auto;
-	padding:230px 0 0;
+	padding:228px 0 0;
 	width:100%;
 	text-align: center;
 	span.large_header {
@@ -18,5 +18,58 @@
 		line-height: 86px;
 		max-width: 985px;
 		display: inline-block;
+	}
+}
+
+
+.section_five_content {
+	font-family: $gothicbook;
+	margin:57px auto 0;
+	line-height: 31px;
+	font-size: 18px;
+	color:$bluedark;
+	max-width: 840px;
+	
+}
+
+
+.case_results_wrapper {
+	display: flex;
+	width:100%;
+	justify-content: space-around;
+	margin:162px 0 0;
+	padding-left:45px;
+	padding-right:45px;
+}
+
+
+.single_case_results {
+	text-align: center;
+	span {
+		display:block;
+	}
+	span.case_results_small_header {
+		font-family: $gothicdemicondensed;
+		text-transform: uppercase;
+		color:$bluelight;
+		font-size: 20px;
+		letter-spacing: 16px;
+		&:before {
+			content:"";
+			width:26px;
+			height:3px;
+			background: $bluedark;
+			display: block;
+			margin:0 auto 44px;
+			transform: rotate(-60deg);
+		}
+	}
+	span.case_results_large_header {
+		font-size: 25px;
+		font-family:$questrabold;
+		text-transform: uppercase;
+		color:$bluedark;
+		letter-spacing: 6px;
+		margin:18px 0 0;
 	}
 }
