--- a/wp-content/themes/schlemmer/css/scss/_slick.scss
+++ b/wp-content/themes/schlemmer/css/scss/_slick.scss
@@ -126,19 +126,9 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    
 }
 
-/* Icons */
-@font-face
-{
-    font-family: 'slick';
-    font-weight: normal;
-    font-style: normal;
-
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
-}
 /* Arrows */
 .slick-prev,
 .slick-next
@@ -190,7 +180,7 @@
 .slick-prev:before,
 .slick-next:before
 {
-    font-family: 'slick';
+    font-family: comic-sans;
     font-size: 20px;
     line-height: 1;
 
@@ -301,7 +291,7 @@
 }
 .slick-dots li button:before
 {
-    font-family: 'slick';
+    font-family: comic-sans;
     font-size: 6px;
     line-height: 20px;
 
