--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
@@ -23,10 +23,10 @@
 
 
 .section_five_content {
-	font-family: $gothicbook;
+	// font-family: $gothicbook;
 	margin:57px auto 0;
 	line-height: 31px;
-	font-size: 18px;
+	// font-size: 18px;
 	color:$bluedark;
 	max-width: 840px;
 	
