--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -16,6 +16,7 @@
 				"home-sections/section-three",
 				"home-sections/section-four",
 				"home-sections/section-five",
+				"home-sections/section-six",
 				"animations";
 
 
