--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
@@ -14,6 +14,9 @@
 		height:auto;
 		display: block;
 	}
+	img.mobile_sec_six {
+		display: none;
+	}
 }
 
 
@@ -272,3 +275,55 @@
 } /* Media Query */
 
 
+
+
+@media screen and (max-width: 767px) {
+	
+	#section_six {
+		flex-direction: column;
+	}
+	
+	.sec_six_att_wrapper {
+		margin-top:0;
+		margin-bottom:0;
+		width:100%;
+		background: none;
+		height:auto;
+		img.mobile_sec_six {
+			display: block;;
+		}
+	}
+	
+	.sec_six_content_wrapper {
+		width:100%;
+		text-align: center;
+		padding: 50px 25px 70px;
+		.sec_six_content {
+			text-align: left;
+		}
+		.sec_six_title_wrapper {
+			margin-left:0;
+		}
+		span.small_header {
+			font-size:17px;
+			letter-spacing: 17px;
+			padding-left:17px;
+			margin-bottom:20px;
+		}
+		span.large_header {
+			margin-left:0;
+			font-size:45px;
+			line-height: 41px;
+		}
+		span.att_name {
+			font-size:15px;
+			margin-left: 33px;
+		}
+	}
+	
+	
+	
+	
+	
+	
+} /* Media Query */
